:bug: fix: try to fix release ci

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lobehub/lobe-chat-plugins",
+  "name": "@lobehub/lobe-chat-plugins",
   "version": "0.1.0",
   "description": "",
   "keywords": [
