--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,10 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 7
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
@@ -23,21 +19,21 @@ jobs:
           node-version: '18'
 
       - name: Build
-        run: pnpm run build
+        run: npm run build
+
+      - name: Install deps
+        run: npm install -g @semantic-release/git @semantic-release/changelog
 
       - name: Release
         uses: cycjimmy/semantic-release-action@v3
         with:
           semantic_version: 19.0.5
           extra_plugins: |
-            @semantic-release/changelog@6.0.0
             @semantic-release/git
+            @semantic-release/changelog
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Install cnpm
-        run: pnpm install cnpm
-
       - name: Sync to npmmirror
-        run: cnpm sync @lobehub/lobe-chat-plugins
+        run: npx cnpm sync @lobehub/lobe-chat-plugins
