fix: remove types file

--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
   "author": "LobeHub <i@lobehub.com>",
   "sideEffects": false,
   "main": "index.json",
-  "types": "index.d.ts",
   "files": [
-    "index.json",
-    "index.d.ts"
+    "index.json"
   ],
   "scripts": {
     "build": "node ./scripts/buildIndex.mjs"
