feat: update version to v1

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "index.json"
   ],
   "scripts": {
-    "build": "node ./scripts/buildIndex.mjs"
+    "build": "node .github/scripts/buildIndex.mjs"
   },
   "publishConfig": {
     "access": "public",
