--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20",
     "consola": "^3",
     "dayjs": "^1",
-    "prettier": "^3"
+    "prettier": "^3",
+    "typescript": "^5"
   }
 }
