🌐 feat: add i18n workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Format
         run: pnpm run format
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          OPENAI_TOKEN: ${{ secrets.OPENAI_TOKEN }}
 
       - name: Prettier
         run: |
