--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "scripts": {
     "build": "node scripts/build.mjs",
     "format": "node scripts/format.mjs",
+    "lint": "eslint \"scripts/**/*.mjs\" --fix",
     "prettier": "prettier -c --write \"**/*.{json,mjs,md}\"",
-    "test": "npm run format && npm run build"
+    "test": "node scripts/test.mjs"
   },
   "devDependencies": {
     "@lobehub/chat-plugin-sdk": "latest",
@@ -22,6 +23,9 @@
     "@types/node": "^20",
     "consola": "^3",
     "dayjs": "^1",
+    "dotenv": "^16",
+    "eslint": "^8",
+    "langchain": "latest",
     "prettier": "^3",
     "typescript": "^5"
   }
