✨ feat: Add dependencies and devDependencies to package.json
- Add dependencies and devDependencies to the package.json file.
- Update the identifier in the realtimeWeather.json file.
- Update the identifier in the searchEngine.json file.
- Update the identifier in the webCrawler.json file.
- Add code to format and modify certain properties of a JSON object in the format.mjs file.

--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "devDependencies": {
     "@lobehub/chat-plugin-sdk": "latest",
     "@lobehub/lint": "latest",
+    "@types/lodash-es": "^4",
     "@types/node": "^20",
     "consola": "^3",
     "dayjs": "^1",
     "dotenv": "^16",
     "eslint": "^8",
     "langchain": "latest",
+    "lodash-es": "^4",
     "prettier": "^3",
     "remark": "^14",
     "remark-cli": "^11",
