--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "license": "MIT",
   "author": "LobeHub <i@lobehub.com>",
+  "type": "module",
   "scripts": {
-    "build": "node scripts/build.mjs",
-    "format": "node scripts/format.mjs",
-    "lint": "eslint \"scripts/**/*.mjs\" --fix",
-    "lint:md": "remark . --quiet --frail --output",
-    "prettier": "prettier -c --write \"**/*.{json,mjs,md}\"",
-    "test": "node scripts/test.mjs"
+    "awesome": "bun scripts/build.ts && bun scripts/updateAwesome.ts",
+    "build": "bun scripts/build.ts",
+    "format": "bun scripts/format.ts",
+    "lint": "eslint \"scripts/**/*.ts\" --fix",
+    "lint:md": "remark . --quiet --output",
+    "prettier": "prettier -c --write \"**/*.{json,ts,md}\"",
+    "test": "bun scripts/test.ts"
   },
   "devDependencies": {
     "@lobehub/chat-plugin-sdk": "latest",
