:construction_worker: ci: fix ci

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Format
         run: bun run format
         env:
-          OPENAI_TOKEN: ${{ secrets.OPENAI_TOKEN }}
-          
+          OPENAI_API_KEY: ${{ secrets.OPENAI_TOKEN }}
+
       - name: Awesome
         run: bun run awesome
 
