--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "license": "MIT",
   "author": "LobeHub <i@lobehub.com>",
   "scripts": {
-    "awesome": "tsx scripts/build.ts && bun scripts/updateAwesome.ts",
-    "build": "tsx scripts/build.ts",
-    "sync": "tsx scripts/sync.ts",
-    "format": "tsx scripts/format.ts",
+    "awesome": "bun scripts/build.ts && bun scripts/updateAwesome.ts",
+    "build": "bun scripts/build.ts",
+    "sync": "bun scripts/sync.ts",
+    "format": "bun scripts/format.ts",
     "lint": "eslint \"scripts/**/*.ts\" --fix",
     "lint:md": "remark . --quiet --output",
     "prettier": "prettier -c --write \"**/*.{json,ts,md}\"",
-    "test": "tsx scripts/test.ts"
+    "test": "bun scripts/test.ts"
   },
   "devDependencies": {
     "@lobehub/chat-plugin-sdk": "latest",
@@ -35,7 +35,6 @@
     "prettier": "^3",
     "remark": "^14",
     "remark-cli": "^11",
-    "tsx": "^4",
     "typescript": "^5"
   }
 }
