--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "dayjs": "^1",
     "dotenv": "^16",
     "eslint": "^8",
-    "langchain": "latest",
+    "langchain": "0.1.37",
     "lodash-es": "^4",
     "p-map": "^7",
     "prettier": "^3",
