--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "author": "LobeHub <i@lobehub.com>",
+  "type": "module",
   "scripts": {
     "awesome": "bun scripts/build.ts && bun scripts/updateAwesome.ts",
     "build": "bun scripts/build.ts",
@@ -21,20 +22,26 @@
     "test": "bun scripts/test.ts"
   },
   "devDependencies": {
-    "@lobehub/chat-plugin-sdk": "latest",
-    "@lobehub/lint": "latest",
-    "@types/lodash-es": "^4",
-    "@types/node": "^20",
-    "consola": "^3",
-    "dayjs": "^1",
-    "dotenv": "^16",
-    "eslint": "^8",
+    "@lobehub/chat-plugin-sdk": "^1.32.4",
+    "@lobehub/lint": "^1.24.3",
+    "@octokit/rest": "^20.1.1",
+    "@types/fs-extra": "^11.0.4",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.14.14",
+    "consola": "^3.2.3",
+    "dayjs": "^1.11.12",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "fs-extra": "^11.2.0",
     "langchain": "0.1.37",
-    "lodash-es": "^4",
-    "p-map": "^7",
-    "prettier": "^3",
-    "remark": "^14",
-    "remark-cli": "^11",
-    "typescript": "^5"
+    "lodash-es": "^4.17.21",
+    "p-map": "^7.0.2",
+    "prettier": "^3.3.3",
+    "remark": "^14.0.3",
+    "remark-cli": "^11.0.0",
+    "remark-pangu": "^2.2.0",
+    "typescript": "^5.5.4",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.2"
   }
 }
