Remove the usage of ChatOpenAI from the langchain package and switch to using OpenAI for i18n translation.

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "fs-extra": "^11.2.0",
-    "langchain": "0.1.37",
     "lodash-es": "^4.17.21",
+    "openai": "^4.58.1",
     "p-map": "^7.0.2",
     "prettier": "^3.3.3",
     "remark": "^14.0.3",
