--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@lobehub/lobe-chat-plugins",
+  "name": "@lobehub/plugins-index",
   "version": "0.0.0",
-  "private": true,
   "description": "LobeChat Plugins Index",
   "homepage": "https://github.com/lobehub/lobe-chat-plugins",
   "repository": {
@@ -11,6 +10,10 @@
   "license": "MIT",
   "author": "LobeHub <i@lobehub.com>",
   "type": "module",
+  "main": "public/index.json",
+  "files": [
+    "public"
+  ],
   "scripts": {
     "awesome": "bun scripts/build.ts && bun scripts/updateAwesome.ts",
     "build": "bun scripts/build.ts",
@@ -18,6 +21,7 @@
     "lint": "eslint \"scripts/**/*.ts\" --fix",
     "lint:md": "remark . --quiet --output",
     "prettier": "prettier -c --write \"**/*.{json,ts,md}\"",
+    "release": "semantic-release",
     "sync": "bun scripts/sync.ts",
     "test": "bun scripts/test.ts"
   },
@@ -30,6 +34,7 @@
     "@types/node": "^20.14.14",
     "consola": "^3.2.3",
     "dayjs": "^1.11.12",
+    "dirty-json": "^0.9.2",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "fs-extra": "^11.2.0",
@@ -40,8 +45,13 @@
     "remark": "^14.0.3",
     "remark-cli": "^11.0.0",
     "remark-pangu": "^2.2.0",
+    "semantic-release": "^21.1.2",
     "typescript": "^5.5.4",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.2"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   }
 }
